<resources>
    <string name="app_name">My Application</string>
    <string name="a_cup_of_coffee">a cup of coffee</string>
    <string name="affect">affect</string>
    <string name="coffee_so_good_your_taste_buds_will_love_it">Coffee so good,\nyour taste buds \nwill love it.</string>
    <string name="the_best_grain_the_finest_roast_the_powerful_flavor">The best grain, the finest roast, the \npowerful flavor.</string>
    <string name="get_started">Get Started</string>
    <string name="location">Location</string>
    <string name="search_coffee">Search coffee</string>
    <string name="bilzen_tanjungbalai">Bilzen, Tanjungbalai</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="read_more_text">A cappuccino is an approximately 150 ml (5 oz) beverage, with 25 ml of espresso coffee and 85ml of fresh milk the fo.. Read More</string>
    <string name="additional_text">"A cappuccino is an approximately 150 ml (5 oz) beverage, with 25 ml of espresso coffee and 85 ml of fresh milk. The foamy milk on top, often decorated with a sprinkle of cocoa powder or cinnamon, gives cappuccino its distinctive appearance and rich flavor."</string>
    <string name="likes">Likes</string>
    <string name="you_don_t_have_a_favourite_coffee_yet">you don\'t have a favourite coffee yet</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="jl_kpg_sutoyo">Jl. Kpg Sutoyo</string>
    <string name="kpg_sutoyo_no_620_bilzen_tanjungbalai">Kpg. Sutoyo No. 620, Bilzen, Tanjungbalai.</string>
    <string name="edit_address">Edit Address</string>
    <string name="order">Order</string>
    <string name="add_note">Add Note</string>
    <string name="_1_discount_is_applied">1 Discount is applied</string>
    <string name="payment_summary">Payment Summary</string>
</resources>