<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sora_semibold"
        android:gravity="center"
        android:text="@string/order"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/order_types"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView9"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@null"
        app:tabMode="fixed"
        app:tabRippleColor="@null" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sora_semibold"
        android:text="@string/delivery_address"
        android:textColor="@color/delivery_address"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/sora_semibold"
        android:text="@string/jl_kpg_sutoyo"
        android:textColor="@color/delivery_address"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sora_regular"
        android:text="@string/kpg_sutoyo_no_620_bilzen_tanjungbalai"
        android:textColor="@color/address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView11" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/size_coffee_bg"
        android:fontFamily="@font/sora_regular"
        android:paddingStart="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/edit_address"
        android:textColor="@color/edit_address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView12" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView13"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView13"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView13" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/size_coffee_bg"
        android:fontFamily="@font/sora_regular"
        android:layout_marginStart="8dp"
        android:paddingStart="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/add_note"
        android:textColor="@color/edit_address"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView13"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView12" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:src="@drawable/note"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView14"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView14"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView14" />


</androidx.constraintlayout.widget.ConstraintLayout>