<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/coffee" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:layout_gravity="bottom"
        android:src="@drawable/affect" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/sora_semibold"
            android:gravity="center"
            android:text="@string/coffee_so_good_your_taste_buds_will_love_it"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/sora_regular"
            android:gravity="center"
            android:text="@string/the_best_grain_the_finest_roast_the_powerful_flavor"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/StartButton"
            android:layout_width="315dp"
            android:layout_height="62dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/sora_semibold"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            android:clickable="true"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>